Fix spacing on alpha alert

--- a/_scss/patterns/partials/_alerts.scss
+++ b/_scss/patterns/partials/_alerts.scss
@@ -58,7 +58,7 @@
       }
     }
   .fa {
-    padding:.2em .5em .5em .4em;
+    padding:.13em .5em .5em .4em;
     }
   }//button
 }//alpha-alert
